Event listner and if statement added to JS

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </header>
     <main>
       <input id="userInput" type="text" name="" value="">
-      <button type="button" name="button">Guess</button>
-      <button type="button" name="button">Clear</button>
+      <button id="guessButton" type="button" name="button">Guess</button>
+      <button id="clearButton" type="button" name="button">Clear</button>
       <div class="last-guess">
       <p id=></p>
       <p></p>
