Update file structure and add normalize.css

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Number Guesser</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
     <script src="main.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -14,10 +16,10 @@
       <input id="userInput" type="text" name="" value="">
       <button id="guessButton" type="button" name="button">Guess</button>
       <button id="clearButton" type="button" name="button">Clear</button>
-      <div class="last-guess">
+      <div class="lastGuess">
       <p id=></p>
-      <p></p>
-      <p></p>
+      <p id=lastNum></p>
+      <p id=message></p>
       </div>
       <button type="button" name="button">Reset</button>
     </main>
