--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Number Guesser</title>
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
-    <script src="main.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700" rel="stylesheet">
   </head>
   <body>
@@ -13,15 +12,14 @@
       <h1>Number <span>Guesser</span></h1>
     </header>
     <main>
-      <input id="userInput" type="text" name="" value="">
+      <input id="userInput" type=number name="" value="">
       <button id="guessButton" type="button" name="button">Guess</button>
       <button id="clearButton" type="button" name="button">Clear</button>
-      <div class="lastGuess">
-      <p id=></p>
-      <p id=lastNum></p>
-      <p id=message></p>
-      </div>
-      <button type="button" name="button">Reset</button>
+      <article class="guessTitle"></article>
+      <article class="lastGuess"></article>
+      <article class="guessDir"></article>
+      <button id="resetButton" type="button" name="button">Reset</button>
     </main>
   </body>
+<script src="main.js"></script>
 </html>
