Update css and addclear function to guess button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Number <span>Guesser</span></h1>
     </header>
     <main>
-      <input id="userInput" type=number name="" value="">
+      <input id="userInput" type=number name="" value="Enter your guess">
       <button id="guessButton" type="button" name="button">Guess</button>
       <button id="clearButton" type="button" name="button">Clear</button>
       <article class="guessTitle"></article>
