Add button disabled feature

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       <h1>Number <span>Guesser</span></h1>
     </header>
     <main>
-      <input id="userInput" name="" value="">
-      <button id="guessButton" type="button" name="button">Guess</button>
-      <button id="clearButton" type="button" name="button">Clear</button>
+      <input id="userInput" name="" value="" placeholder="Enter a number here">
+      <button id="guessButton" type=submit name="button" disabled>Guess</button>
+      <button id="clearButton" type="button" name="button" disabled>Clear</button>
       <article class="guessTitle"></article>
       <article class="lastGuess"></article>
       <article class="guessDir"></article>
-      <button id="resetButton" type="button" name="button">Reset</button>
+      <button id="resetButton" type="button" name="button" disabled>Reset</button>
     </main>
   </body>
 <script src="main.js"></script>
