Add settings section and min/max fields

--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
       <article class="lastGuess"></article>
       <article class="guessDir"></article>
       <button id="resetButton" type="button" name="button" disabled>Reset</button>
+      <input id="settingsButton" type="image" src="images/high-resolution-gear-th.png" alt="">
+      <section id="settings" class="hidden">
+        <h2>Settings</h2>
+        <div>
+          <input id="minNum" type=number name="" value="" placeholder = "Enter a new minimum number">
+          <button id="updateMin"type="button" name="button" disabled>Enter</button>
+        </div>
+        <div>
+          <input id="maxNum" type=number name="" value="" placeholder = "Enter a new maximum number">
+          <button id="updateMax"type="button" name="button" disabled>Enter</button>
+        </div>
+      </section>
     </main>
   </body>
 <script src="main.js"></script>
