Add min/max functionality

--- a/index.html
+++ b/index.html
@@ -22,14 +22,10 @@
       <input id="settingsButton" type="image" src="images/high-resolution-gear-th.png" alt="">
       <section id="settings" class="hidden">
         <h2>Settings</h2>
-        <div>
-          <input id="minNum" type=number name="" value="" placeholder = "Enter a new minimum number">
-          <button id="updateMin"type="button" name="button" disabled>Enter</button>
-        </div>
-        <div>
-          <input id="maxNum" type=number name="" value="" placeholder = "Enter a new maximum number">
-          <button id="updateMax"type="button" name="button" disabled>Enter</button>
-        </div>
+        <p id="minMaxMsg">Set a new range for the game</p>
+        <input id="minNum" type=number name="" value="" placeholder = "Min">
+        <input id="maxNum" type=number name="" value="" placeholder = "Max">
+        <button id="updateValues"type="button" name="button" disabled>Enter</button>
       </section>
     </main>
   </body>
