Remove glow from buttons and input fields

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
       <input id="userInput" name="" value="" placeholder="Enter a number here">
-      <button id="guessButton" type=submit name="button" disabled>Guess</button>
+      <button id="guessButton" type="submit" name="button" disabled>Guess</button>
       <button id="clearButton" type="button" name="button" disabled>Clear</button>
       <article class="guessTitle"></article>
       <article class="lastGuess"></article>
