Update input placeholder to reflect current game min/max.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Number <span>Guesser</span></h1>
     </header>
     <main>
-      <input id="userInput" name="" value="" placeholder="Enter a number here">
+      <input id="userInput" name="" value="" placeholder="Enter your guess">
       <button id="guessButton" type="submit" name="button" disabled>Guess</button>
       <button id="clearButton" type="button" name="button" disabled>Clear</button>
       <article class="guessTitle"></article>
