Add slideout scoreboard

--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
       <input id="userInput" name="" value="" placeholder="Enter your guess">
       <button id="guessButton" type="submit" name="button" disabled>Guess</button>
       <button id="clearButton" type="button" name="button" disabled>Clear</button>
+
+      <div id="slideout">
+          <img src="https://www.cyberscore.me.uk/images/icon_ranked.png" alt="score" />
+          <div id="slideout_inner">
+          </div>
+      </div>
+
+
+
       <article class="guessTitle"></article>
       <article class="lastGuess"></article>
       <article class="guessDir"></article>
